# swayswap

./: .gitignore  pnpm-lock.yaml
client/: package.json
client/deploy-contracts/: index.ts
client/scripts/: build-contracts.sh  deploy-contracts.sh  watch-contracts.sh
client/src/: config.ts
client/src/pages/: MintToken.tsx  Pool.tsx
contracts/: Cargo.toml  swaySwapABI.json
contracts/src/: main.sw
contracts/swap_abi/: Forc.toml
contracts/swap_contract/: Forc.toml
contracts/swap_contract/src/: main.sw
contracts/swap_contract/tests/: harness.rs
contracts/swayswap_abi/src/: main.sw
contracts/swayswap_contract/src/: main.sw
contracts/tests/: harness.rs  mint.rs
docker/fuel-core/: Dockerfile  chainConfig.json
