[package]
authors = ["devel"]
edition = "2021"
license = "GPL-3.0-only"
name = "swayswap"
version = "0.0.0"

[dependencies]
fuel-gql-client = { version = "0.3.2", default-features = false }
fuel-tx = "0.3"
fuels-abigen-macro = "0.4.0"
fuels-contract = "0.4.0"
fuels-core = "0.4.0"
rand = "0.8"
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
